--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,12 +11,12 @@ p, li {
 }
 
 html {
-    background-color: #00539F;
+    background-color: #7e1900;
 }
 
 body {
     margin: 0 auto;
-    background-color: #FF9500;
+    background-color: #08b834;
     padding: 0 20px 20px 20px;
     border: 5px solid black;
 }
@@ -26,7 +26,7 @@ h1 {
     text-align: center;
     margin: 0;
     padding: 20px 0;
-    color: #00539F;
+    color: #9f0500;
     text-shadow: 3px 3px 1px black;
 }
 
